Fix overflow/sizing issues with the Navbar component

--- a/src/Navbar.css
+++ b/src/Navbar.css
@@ -1,6 +1,5 @@
 .navbar {
     box-shadow: 0px 0px 4px 4px rgba(255, 255, 255, 0.5);
-    width: 7.5vw;
     height: 95vh;
     margin: 0.25%;
     padding: 0.5%;
